Update build strategy and include patternfly less in main.less

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,6 +1,11 @@
 // Create any partial less files you want and import them here or just import patternfly styles and add your less after
 
+@import '../node_modules/patternfly/dist/less/patternfly.less';
+@import '../node_modules/patternfly/dist/less/patternfly-additions.less';
+
 // Just for testing
 body {
   background: lightblue;
 }
+
+// stuff
