--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -145,7 +145,7 @@
                 <span class="fa fa-ellipsis-v"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight">
-                <li><a href="#">Edit</a></li>
+                <li><a href="/persona/create">Edit</a></li>
                 <li><a href="#">Export to SVG</a></li>
                 <li><a href="#">Export data</a></li>
                 <li><a href="#">Link to another persona</a></li>
