Little but of handlebars cleanup

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Personae Gratae</title>
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+<head>
+  <meta charset="utf-8">
+  <title>Personae Gratae</title>
+
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
+
 <body>
 
   <!-- Patternfly nav -->
@@ -29,7 +31,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <span class="pficon pficon-user"></span>
-            Brian Johnson <b class="caret"></b>
+            Brian Johnson
+            <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
             <li>
@@ -73,16 +76,18 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-primary">
-        {{!-- <li>
+        {{!--
+        <li>
           <a href="index.html">Dashboard</a>
         </li> --}}
         <li class="active">
           <a href="/">Persona List</a>
         </li>
         <li class="">
-            <a href="/persona/card">Persona Card</a>
+          <a href="/persona/card">Persona Card</a>
         </li>
-        {{!-- <li class="">
+        {{!--
+        <li class="">
           <a href="empty.html">Empty State</a>
         </li> --}}
         <li class="">
@@ -91,7 +96,8 @@
         <li class="">
           <a href="/create">Add/edit persona</a>
         </li>
-        {{!-- <li class="">
+        {{!--
+        <li class="">
           <a href="/persona-output.html">Persona output</a>
         </li> --}}
       </ul>
@@ -99,12 +105,14 @@
     </div>
   </nav>
 
-    <div>
-      {{{body}}}
-    </div>
+  <div>
+    {{{body}}}
+  </div>
 
-    {{!-- <footer>
-      Footer (if needed);
-    </footer> --}}
+  {{!--
+  <footer>
+    Footer (if needed);
+  </footer> --}}
 </body>
+
 </html>
