Adds a playing card view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19677,21 +19677,43 @@ table.dataTable th:active {
 .wizard-pf-step-alt-substep.disabled a {
   pointer-events: none;
 }
+img {
+  max-width: 100%;
+}
 .list-view-pf-left img {
   max-width: 2em;
 }
 .pg-persona {
   display: grid;
-  grid-template: "roles-title quote-title quote-title  " "roles quote quote  " "skills-title success-title dangers-title" "skills success dangers" "name-title day-title network-title" "name day network";
+  grid-template: "roles-title quote-title quote-title  " "roles quote quote  " "skills-title success-title dangers-title" "skills success dangers" "id-title day-title network-title" "id day network";
   grid-template-columns: 1fr 2fr 2fr;
   grid-column-gap: 1em;
 }
 .pg-persona > * {
   background-color: #f5f5f5;
 }
+.pg-persona--card {
+  grid-template: "id" "roles" "quote" "skills-title" "skills" "success-title" "success" "dangers-title" "dangers" "day-title" "day" "network-title" "network";
+  grid-template-columns: 1fr;
+  grid-column-gap: .5em;
+  border: 1px solid #d1d1d1;
+  padding: 1em;
+}
+.pg-persona--card > * {
+  background-color: transparent;
+}
+.pg-persona--card h3 {
+  font-size: 1em;
+  font-color: #d1d1d1;
+  font-weight: 600;
+  text-transform: uppercase;
+}
 .pg-title {
   align-self: end;
   background-color: inherit;
+}
+.pg-title--card {
+  font-size: 1em;
 }
 .pg-title--roles {
   grid-area: roles-title;
@@ -19708,8 +19730,8 @@ table.dataTable th:active {
 .pg-title--dangers {
   grid-area: dangers-title;
 }
-.pg-title--name {
-  grid-area: name-title;
+.pg-title--id {
+  grid-area: id-title;
 }
 .pg-title--day {
   grid-area: day-title;
@@ -19732,12 +19754,21 @@ table.dataTable th:active {
 .pg-dangers {
   grid-area: dangers;
 }
-.pg-name {
-  grid-area: name;
+.pg-id {
+  grid-area: id;
 }
 .pg-day {
   grid-area: day;
 }
 .pg-network {
   grid-area: network;
+}
+.pg-id__avatar {
+  background: transparent;
+}
+.pg-id__avatar img {
+  border-radius: 50%;
+}
+.pg-id__avatar--card img {
+  width: 3em;
 }
