--- a/views/persona-details.handlebars
+++ b/views/persona-details.handlebars
@@ -53,7 +53,7 @@
         </div>
 
         <div class="pg-title pg-title--successes">
-          <h3>Keys to Sucess</h3>
+          <h3>Keys to Success</h3>
         </div>
         <div class="pg-successes">
           <ul>
@@ -77,7 +77,7 @@
         <div class="pg-title pg-title--id">
           <h3>{{name}}</h3>
         </div>
-        <div class="pg-id">
+        <div class="pg-id pg-id__avatar">
           <img src="{{photo}}" alt="Picture of {{name}}">
         </div>
 
