--- a/views/persona-card.handlebars
+++ b/views/persona-card.handlebars
@@ -1,8 +1,7 @@
 {{!-- Maybe add horizontal nav and breadcrumbs here --}}
 
 <div class="container-fluid">
-
-    <div class="row">
+  <div class="row">
     <ol class="breadcrumb col-xs-12">
       <li>
         <a href="#0">Back to Persona List</a>
@@ -17,10 +16,95 @@
   <!-- breadcrumb row -->
 
   <div class="row">
-    <div class="col-xs-12">
-      <h3>
-        pf-card for {{name}}'s persona
-      </h3>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+
+      <div class="pg-persona pg-persona--card">
+        <div class="pg-roles">
+          <div>{{jobTitle}}</div>
+        </div>
+
+        <div class="pg-quote">
+          {{quote}}
+        </div>
+
+        <div class="pg-title pg-title--card pg-title--skills">
+          <h3>Background & Skills</h3>
+        </div>
+        <div class="pg-skills">
+          <div class="pg-skill">
+            <div class="pg-skill__title">{{skills.name}}</div>
+            <div class="pg-skill__value">{{skills.rating}}</div>
+          </div>
+          <div class="pg-skill">
+            <div class="pg-skill__title">Skill 2</div>
+            <div class="pg-skill__value">5</div>
+          </div>
+          <div class="pg-skill">
+            <div class="pg-skill__title">Another skill</div>
+            <div class="pg-skill__value">1</div>
+          </div>
+        </div>
+
+        <div class="pg-title pg-title--card pg-title--success">
+          <h3>Keys to Success</h3>
+        </div>
+        <div class="pg-success">
+          <ul>
+            {{#each keysToSuccess}}
+            <li>{{this}}</li>
+            {{/each}}
+          </ul>
+        </div>
+
+        <div class="pg-title pg-title--card pg-title--dangers">
+          <h3>Dangers</h3>
+        </div>
+        <div class="pg-dangers">
+          <ul>
+            {{#each dangers}}
+            <li>{{this}}</li>
+            {{/each}}
+          </ul>
+        </div>
+
+        <div class="pg-id ">
+          <h3>
+          <span class="pg-id__avatar pg-id__avatar--card">
+            <img src="{{photo}}" alt="Picture of {{name}}">
+          </span>
+
+            {{name}}        
+          </h3>
+        </div>
+
+
+        <div class="pg-title pg-title--card pg-title--day">
+          <h3>A Day in the Life</h3>
+        </div>
+        <div class="pg-day">
+          <div class="pg-day__summary">{{dayInTheLife.summary}}</div>
+          <div class="pg-day__chart">
+            <ul>
+              {{#each dayInTheLife.activities}}
+              <li>{{this.name}} {{this.percentage}}</li>
+              {{/each}}
+            </ul>
+          </div>
+        </div>
+
+        <div class="pg-title pg-title--card pg-title--network">
+          <h3>Network</h3>
+        </div>
+        <div class="pg-network">
+          <ul>
+            {{#each network}}
+          <li>persona with id: {{this}}</li>
+          {{/each}}
+          </ul>
+        </div>
+      </div>
+      <!-- col -->
     </div>
+    <!-- row -->
   </div>
-</div>
+  <!-- container -->
