Fix a few dead img links and polish up a few other details.

--- a/views/create-persona.handlebars
+++ b/views/create-persona.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
     <ol class="breadcrumb col-xs-12">
       <li>
-        <a href="#0">Back to Persona List</a>
+        <a href="/">Back to Persona List</a>
       </li>
       <li class="active">
         <strong>Create a persona
