--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -172,54 +172,55 @@
     <div class="col-md-12">
 
       <div class="list-view list-view-pf">
-        {{!-- iterates through each persona --}} {{#each personas}}
+        {{!-- iterates through each persona --}}
+        {{#each personas}}
 
-        <div data-link="details.html" class="list-group-item">
-          <a href="/persona/details" class="list-group-item-link"></a>
-          <div class="list-view-pf-checkbox">
-            <input type="checkbox">
-          </div>
-          <div class="list-view-pf-actions">
-            <button class="btn btn-default">View Details</button>
-            <div class="dropdown pull-right dropdown-kebab-pf">
-              <button class="btn btn-link dropdown-toggle" type="button" id="dropdownKebabRight" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="true">
-                <span class="fa fa-ellipsis-v"></span>
-              </button>
-              <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight">
-                <li>
-                  <a href="/persona/create">Edit</a>
-                </li>
-                <li>
-                  <a href="#">Export to SVG</a>
-                </li>
-                <li>
-                  <a href="#">Export data</a>
-                </li>
-                <li>
-                  <a href="#">Link to another persona</a>
-                </li>
-              </ul>
+          <div data-link="details.html" class="list-group-item">
+            <a href="/persona/details" class="list-group-item-link"></a>
+            <div class="list-view-pf-checkbox">
+              <input type="checkbox">
             </div>
-          </div>
-          <div class="list-view-pf-main-info">
-            <div class="list-view-pf-left">
-              <img class="img--icon img--icon--sm" src="/img/aimee_portrait.jpg" />
-            </div>
-            <div class="list-view-pf-body">
-              <div class="list-view-pf-description">
-                <div class="list-group-item-heading">
-                  <a href="/persona/details" class="list-group-item-link">{{name}}</a>
-                </div>
-                <div class="list-group-item-text">
-                  {{ role }}
-                </div>
+            <div class="list-view-pf-actions">
+              <button class="btn btn-default">View Details</button>
+              <div class="dropdown pull-right dropdown-kebab-pf">
+                <button class="btn btn-link dropdown-toggle" type="button" id="dropdownKebabRight" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="true">
+                  <span class="fa fa-ellipsis-v"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight">
+                  <li>
+                    <a href="/persona/create">Edit</a>
+                  </li>
+                  <li>
+                    <a href="#">Export to SVG</a>
+                  </li>
+                  <li>
+                    <a href="#">Export data</a>
+                  </li>
+                  <li>
+                    <a href="#">Link to another persona</a>
+                  </li>
+                </ul>
               </div>
+            </div>
+            <div class="list-view-pf-main-info">
+              <div class="list-view-pf-left">
+                <img class="img--icon img--icon--sm" src="{{photo}}" />
+              </div>
+              <div class="list-view-pf-body">
+                <div class="list-view-pf-description">
+                  <div class="list-group-item-heading">
+                    <a href="/persona/details" class="list-group-item-link">{{name}}</a>
+                  </div>
+                  <div class="list-group-item-text">
+                    {{ role }}
+                  </div>
+                </div>
 
+              </div>
             </div>
           </div>
-        </div>
-        <!-- list-group-item -->
+          <!-- list-group-item -->
 
         {{/each}}
 
