--- a/views/persona-card.handlebars
+++ b/views/persona-card.handlebars
@@ -4,11 +4,11 @@
   <div class="row">
     <ol class="breadcrumb col-xs-12">
       <li>
-        <a href="#0">Back to Persona List</a>
+        <a href="/">Back to Persona List</a>
       </li>
       <li class="active">
         <strong>Persona Details:
-          <b>{{ name }}</b>
+          <b>{{ persona.name }}</b>
         </strong>
       </li>
     </ol>
@@ -20,29 +20,23 @@
 
       <div class="pg-persona pg-persona--card">
         <div class="pg-roles">
-          <div>{{jobTitle}}</div>
+          <div>{{persona.jobTitle}}</div>
         </div>
 
         <div class="pg-quote">
-          {{quote}}
+          {{persona.quote}}
         </div>
 
         <div class="pg-title pg-title--card pg-title--skills">
           <h3>Background & Skills</h3>
         </div>
         <div class="pg-skills">
+          {{#each persona.skills}}
           <div class="pg-skill">
-            <div class="pg-skill__title">{{skills.name}}</div>
-            <div class="pg-skill__value">{{skills.rating}}</div>
+            <div class="pg-skill__title">{{this.name}}</div>
+            <div class="pg-skill__value">{{this.rating}}</div>
           </div>
-          <div class="pg-skill">
-            <div class="pg-skill__title">Skill 2</div>
-            <div class="pg-skill__value">5</div>
-          </div>
-          <div class="pg-skill">
-            <div class="pg-skill__title">Another skill</div>
-            <div class="pg-skill__value">1</div>
-          </div>
+          {{/each}}
         </div>
 
         <div class="pg-title pg-title--card pg-title--success">
@@ -50,7 +44,7 @@
         </div>
         <div class="pg-success">
           <ul>
-            {{#each keysToSuccess}}
+            {{#each persona.keysToSuccess}}
             <li>{{this}}</li>
             {{/each}}
           </ul>
@@ -61,7 +55,7 @@
         </div>
         <div class="pg-dangers">
           <ul>
-            {{#each dangers}}
+            {{#each persona.dangers}}
             <li>{{this}}</li>
             {{/each}}
           </ul>
@@ -69,11 +63,10 @@
 
         <div class="pg-id ">
           <h3>
-          <span class="pg-id__avatar pg-id__avatar--card">
-            <img src="{{photo}}" alt="Picture of {{name}}">
-          </span>
-
-            {{name}}        
+            <span class="pg-id__avatar pg-id__avatar--card">
+              <img src="{{persona.photo}}" alt="Picture of {{persona.name}}">
+            </span>
+            {{persona.name}}
           </h3>
         </div>
 
@@ -82,11 +75,11 @@
           <h3>A Day in the Life</h3>
         </div>
         <div class="pg-day">
-          <div class="pg-day__summary">{{dayInTheLife.summary}}</div>
+          <div class="pg-day__summary">{{persona.dayInTheLife.summary}}</div>
           <div class="pg-day__chart">
             <ul>
-              {{#each dayInTheLife.activities}}
-              <li>{{this.name}} {{this.percentage}}</li>
+              {{#each persona.dayInTheLife.activities}}
+                <li>{{this.name}} {{this.percentage}}</li>
               {{/each}}
             </ul>
           </div>
@@ -97,9 +90,9 @@
         </div>
         <div class="pg-network">
           <ul>
-            {{#each network}}
-          <li>persona with id: {{this}}</li>
-          {{/each}}
+            {{#each persona.network}}
+              <li>persona with id: {{this}}</li>
+            {{/each}}
           </ul>
         </div>
       </div>
