Get mongodb working

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -210,10 +210,10 @@
               <div class="list-view-pf-body">
                 <div class="list-view-pf-description">
                   <div class="list-group-item-heading">
-                    <a href="/persona/details" class="list-group-item-link">{{name}}</a>
+                    <a href="/persona/{{_id}}/details" class="list-group-item-link">{{name}}</a>
                   </div>
                   <div class="list-group-item-text">
-                    {{ role }}
+                    {{ jobTitle }}
                   </div>
                 </div>
 
