--- a/src/views/persona-card.handlebars
+++ b/src/views/persona-card.handlebars
@@ -64,7 +64,7 @@
         <div class="pg-id ">
           <h3>
             <span class="pg-id__avatar pg-id__avatar--card">
-              <img src="{{persona.photo}}" alt="Picture of {{persona.name}}">
+              <img src="{{persona.photo}}?bgset=any" alt="Picture of {{persona.name}}">
             </span>
             {{persona.name}}
           </h3>
