--- a/src/views/persona-details.handlebars
+++ b/src/views/persona-details.handlebars
@@ -2,16 +2,18 @@
 
 <div class="container-fluid">
   <div class="row">
-    <ol class="breadcrumb col-xs-12">
-      <li>
-        <a href="/">Back to Persona List</a>
-      </li>
-      <li class="active">
-        <strong>Persona Details:
-          <b>{{ persona.name }}</b>
-        </strong>
-      </li>
-    </ol>
+    <div class="col-xs-12">
+      <ol class="breadcrumb">
+        <li>
+          <a href="/">Back to Persona List</a>
+        </li>
+        <li class="active">
+          <strong>Persona Details:
+            <b>{{ persona.name }}</b>
+          </strong>
+        </li>
+      </ol>
+    </div>
   </div>
   <!-- breadcrumb row -->
 
