Switch photos back to robohash

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -205,7 +205,7 @@
             </div>
             <div class="list-view-pf-main-info">
               <div class="list-view-pf-left">
-                <img class="img--icon img--icon--sm" src="{{photo}}" />
+                <img class="img--icon img--icon--sm" src="https://robohash.org/{{name}}?bgset=any" />
               </div>
               <div class="list-view-pf-body">
                 <div class="list-view-pf-description">
