--- a/src/views/persona-details.handlebars
+++ b/src/views/persona-details.handlebars
@@ -74,7 +74,7 @@
           <h3>{{persona.name}}</h3>
         </div>
         <div class="pg-id pg-id__avatar">
-          <img src="{{persona.photo}}" alt="Picture of {{persona.name}}">
+          <img src="https://robohash.org/{{persona.name}}?bgset=any" alt="Picture of {{persona.name}}">
         </div>
 
         <div class="pg-title pg-title--day">
