Store photos in a separate data dir

--- a/src/views/persona-card.handlebars
+++ b/src/views/persona-card.handlebars
@@ -63,7 +63,7 @@
         <div class="pg-id ">
           <h3>
             <span class="pg-id__avatar pg-id__avatar--card">
-              <img src="https://robohash.org/{{persona.name}}?bgset=any" alt="Picture of {{persona.name}}">
+              <img src="{{persona.photo}}" alt="Picture of {{persona.name}}">
             </span>
             {{persona.name}}
           </h3>
