--- a/src/views/create-persona.handlebars
+++ b/src/views/create-persona.handlebars
@@ -28,13 +28,13 @@
           <input type="text" class="form-control" name="jobTitle">
         </div>
       </div>
-      <div class="form-group">
+      {{!-- <div class="form-group">
         <label for="inputPhoto" class="col-sm-2 control-label">Photo</label>
         <div class="col-sm-10">
           <input type="file" name="photo">
           <p class="help-block">Upload a profile picture for the persona.</p>
         </div>
-      </div>
+      </div> --}}
 
       <h3>Background and Skills</h3>
       <div class="form-group">
